r/o and r/w general registers implemented

--- a/fsm-min/main/CMakeLists.txt
+++ b/fsm-min/main/CMakeLists.txt
@@ -4,6 +4,8 @@ idf_component_register(
                         "MicroControllerUnit.cpp"
                         "PowerManagementUnit.cpp"
                         "SleepAndWakeupController.cpp"
+                        "RegisterRO.cpp"
+                        "RegisterRW.cpp"
                     INCLUDE_DIRS ""
                     REQUIRES soc nvs_flash ulp)
 
