initial value within register

--- a/fsm-min/main/CMakeLists.txt
+++ b/fsm-min/main/CMakeLists.txt
@@ -6,6 +6,8 @@ idf_component_register(
                         "SleepAndWakeupController.cpp"
                         "RegisterRO.cpp"
                         "RegisterRW.cpp"
+                        "ValueRO.cpp"
+                        "ValueRW.cpp"
                     INCLUDE_DIRS ""
                     REQUIRES soc nvs_flash ulp)
 
