ULP processor cores and timer

--- a/fsm-min/main/CMakeLists.txt
+++ b/fsm-min/main/CMakeLists.txt
@@ -6,6 +6,10 @@ idf_component_register(
                         "SleepAndWakeupController.cpp"
                         "RegisterRO.cpp"
                         "RegisterRW.cpp"
+                        "CoprocessorULP.cpp"
+                        "CoreFSM.cpp"
+                        "CoreRISCV.cpp"
+                        "TimerULP.cpp"
                         "ValueRO.cpp"
                         "ValueRW.cpp"
                     INCLUDE_DIRS ""
