BinaryImageULP introduced to load program

--- a/components/mcu/CMakeLists.txt
+++ b/components/mcu/CMakeLists.txt
@@ -2,7 +2,7 @@ cmake_minimum_required(VERSION 3.10)
 
 idf_component_register(
 	SRC_DIRS "src" "src/bits"
-	INCLUDE_DIRS "include"
+	INCLUDE_DIRS "include" "src"
 	REQUIRES ulp
 	REQUIRED_IDF_TARGETS esp32s2)
 
