--- a/fsm-manual/main/CMakeLists.txt
+++ b/fsm-manual/main/CMakeLists.txt
@@ -15,7 +15,7 @@ set(ulp_s_sources "ulp/inc.S")
 #
 # 3. List all the component source files which include automatically
 #    generated ULP export file, ${ulp_app_name}.h:
-set(ulp_exp_dep_srcs "ulp_example_main.cpp")
+set(ulp_exp_dep_srcs "ulp_manual.cpp")
 #
 # 4. Call function to build ULP binary and embed in project using the argument
 #    values above.
