--- a/projects/fsm-manual/CMakeLists.txt
+++ b/projects/fsm-manual/CMakeLists.txt
@@ -1,4 +1,4 @@
 cmake_minimum_required(VERSION 3.10)
-set(COMPONENT_DIRS "main" "../components" "$ENV{IDF_PATH}/components")
+set(COMPONENT_DIRS "main" "../../components" "$ENV{IDF_PATH}/components")
 include($ENV{IDF_PATH}/tools/cmake/project.cmake)
 project(fsm-manual)
