--- a/components/mcu/CMakeLists.txt
+++ b/components/mcu/CMakeLists.txt
@@ -1,7 +1,8 @@
 cmake_minimum_required(VERSION 3.10)
 
 idf_component_register(
-	SRC_DIRS "src" "src/bits" "src/io"
+	SRC_DIRS "src" "src/bits" "src/io" 
+		"src/periphery/pcnt"
 	INCLUDE_DIRS "include" "src"
 	REQUIRES ulp
 	REQUIRED_IDF_TARGETS esp32s2)
